tests/fixtures/negative/exceptions/ObjectExtendsThrowable.kt
package exceptions

class MyError : Exception("class-based error")

class AnotherError : RuntimeException("another class-based error")
